--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -30,7 +30,7 @@
                     Xie</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.10 <date>2024</date>
+                <edition>v 1.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -191,6 +191,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-16T14:54:18.23Z" type="text-version" status="1.0.10" xml:id="UT22084-043-004-717">
                     <desc>deleted footnote in milestone 1.10.</desc>
+                </change>
+                <change who="#john" when="2024-10-16T18:21:10.613Z" type="text-version" status="1.0.11" xml:id="UT22084-043-004-718">
+                    <desc>Edited 1.10 to 1.12 further in discussion with editors.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -548,16 +551,15 @@
                         Tathāgata.</p>
                     <milestone unit="chunk" xml:id="UT22084-043-004-47"/>
                     <p tid="41">“In this regard, Kāśyapa, monks should emulate you and the elder
-                        Subhūti. That is because of the way that, without seeing or hearing of me,
-                        you went forth in emulation of the arhats, the perfectly awakened buddhas,
+                        Subhūti. That is because of the way that, without seeing me or hearing me,
+                        you went forth as a renunciant in emulation of the arhats, the perfectly awakened buddhas,
                         who dwell in this world, Kāśyapa, and became an adornment to this Dharma and
-                        Vinaya. Whosoever directly see the tathāgata, and having seen him,
-                        furthermore, approaches him, then it is only after that, moreover, that the
-                        ordination of those who have actively requested the life of a monk—with
-                        renunciation and full ordination—is authorized by the Tathāgata.
+                        Vinaya. Going forth for those who have seen the Tathāgata directly, and who after 
+                        seeing him have approached him to make the request to go forth as renunciants and 
+                        take full ordination as monks, is then also authorized by the Tathāgata later.
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-043-004-49"/>
-                    <p tid="42">“A son or daughter of noble family should commit to go forth in this
+                    <p tid="42">“A son or daughter of noble family should make the commitment to go forth in this
                         well-proclaimed Dharma and Vinaya by seeing its two objectives. What are the
                         two? They are to attain fruition in this very life <ref cRef="F.70.a" type="folio" xml:id="UT22084-043-004-572"/> and to become in future
                         lives the cause of others seeing the Buddhadharma.<note place="end" xml:id="UT22084-043-004-50"> Here “Buddhadharma” renders the Tibetan
@@ -567,7 +569,7 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-043-004-51"/>
                     <p tid="43">“In this regard, Kāśyapa, some foolish individuals put on saffron
-                        robes in the presence of the Tathāgata and commit to go forth and be
+                        robes in the presence of the Tathāgata and make the commitment to go forth and be
                         ordained into monkhood. Undertaking the trainings, they enter a hut or a
                         cave, close the door, and then engage in thoughts of desire, thoughts of
                         malice or harm, thoughts of their begging bowl and their monastic robes, and
