--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -30,7 +30,7 @@
                     Xie</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.11 <date>2024</date>
+                <edition>v 1.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -195,12 +195,15 @@
                 <change who="#john" when="2024-10-16T18:21:10.613Z" type="text-version" status="1.0.11" xml:id="UT22084-043-004-718">
                     <desc>Edited 1.10 to 1.12 further in discussion with editors.</desc>
                 </change>
+                <change who="#john" when="2024-10-16T18:35:55.363Z" type="text-version" status="1.0.12" xml:id="UT22084-043-004-719">
+                    <desc>Further minor edit.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
         <front>
-            <div type="summary" xml:id="UT22084-043-004-summary">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary" xml:id="UT22084-043-004-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-043-004-1"/>
                 <p tid="2">In this sūtra, Mahākāśyapa poses a series of questions to the Buddha
@@ -221,8 +224,8 @@
                     conduct and meditative inquiry. In addition to the Buddha’s criticism, this
                     sūtra is notable for its memorable analogies, past life narratives, and emphasis
                     on the ascetic practice of the forest-dwelling monastic.</p>
-            </div>
-            <div type="acknowledgment" xml:id="UT22084-043-004-acknowledgment">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment" xml:id="UT22084-043-004-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-043-004-2"/>
                 <p tid="4">This sūtra was translated by Dr. Karen Liljenberg and Dr. Ulrich
@@ -233,10 +236,10 @@
                 <p tid="7">The generous sponsorship of Ting Xie, Guowen Xie, Xiangzhi Yu, and Jiayu
                     Xie, which helped make the work on this translation possible, is most gratefully
                     acknowledged.</p>
-            </div>
-            <div type="introduction" xml:id="UT22084-043-004-introduction">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction" xml:id="UT22084-043-004-introduction">
                 <head type="introduction" tid="8">Introduction</head>
-                <div type="section" xml:id="UT22084-043-004-introduction-1">
+                <tei:div type="section" xml:id="UT22084-043-004-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-043-004-6"/>
                     <p tid="10">
                         <title xml:lang="en">The Great Lion’s Roar of Maitreya</title> opens
@@ -440,15 +443,15 @@
                         Kangyurs included in the Comparative Edition (<foreign xml:lang="Bo-Ltn">dpe
                             bsdur ma</foreign>), as well as that found in the Stok Palace
                         Kangyur.</p>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </front>
         <body>
-            <div type="translation" xml:id="UT22084-043-004-translation">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation" xml:id="UT22084-043-004-translation">
                 <head type="translation"> The Translation </head>
                 <head type="titleHon" tid="23">The Noble Mahāyāna Sūtra</head>
                 <head type="titleMain" tid="24">The Great Lion’s Roar of Maitreya</head>
-                <div type="section" xml:id="UT22084-043-004-section-1">
+                <tei:div type="section" xml:id="UT22084-043-004-section-1">
                     <milestone unit="chunk" xml:id="UT22084-043-004-31"/>
                     <p tid="28">
                         <ref cRef="F.68.a" type="folio" xml:id="UT22084-043-004-568"/>
@@ -556,7 +559,7 @@
                         who dwell in this world, Kāśyapa, and became an adornment to this Dharma and
                         Vinaya. Going forth for those who have seen the Tathāgata directly, and who after 
                         seeing him have approached him to make the request to go forth as renunciants and 
-                        take full ordination as monks, is then also authorized by the Tathāgata later.
+                        take full ordination as monks, is then later also authorized by the Tathāgata.
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-043-004-49"/>
                     <p tid="42">“A son or daughter of noble family should make the commitment to go forth in this
@@ -3270,23 +3273,23 @@
                             Roar of Maitreya</title>, the twenty-third of the one hundred thousand
                         sections of the Dharma discourse known as The Noble Great Heap of
                         Jewels.</trailer>
-                </div>
-                <div type="colophon" xml:id="UT22084-043-004-colophon">
+                </tei:div>
+                <tei:div type="colophon" xml:id="UT22084-043-004-colophon">
                     <head tid="406" type="colophon">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-043-004-452"/>
                     <p tid="407">Translated, edited, and finalized by the Indian preceptors
                         Jinamitra, Surendrabodhi, and Prajñāvarman and the chief editor and
                         translator Bandé Yeshé Dé and others.</p>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </body>
         <back>
-            <div type="notes" xml:id="UT22084-043-004-notes">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes" xml:id="UT22084-043-004-notes">
                 <head type="notes" tid="408">Notes</head>
-            </div>
-            <div type="listBibl" xml:id="UT22084-043-004-listBibl">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl" xml:id="UT22084-043-004-listBibl">
                 <head type="listBibl" tid="410">Bibliography</head>
-                <div type="section" xml:id="UT22084-043-004-listBibl-1">
+                <tei:div type="section" xml:id="UT22084-043-004-listBibl-1">
                     <head type="section" tid="411">Tibetan Sources</head>
                     <bibl xml:id="UT22084-043-004-453">
                         <title xml:lang="Bo-Ltn">byams pa’i seng ge’i
@@ -3386,8 +3389,8 @@
                     <bibl xml:id="UT22084-043-004-472">Phangthangma (<title xml:lang="Bo-Ltn">dkar
                             chag ’phang thang ma</title>). Beijing: mi rigs dpe skrun khang,
                         2003.</bibl>
-                </div>
-                <div type="section" xml:id="UT22084-043-004-listBibl-2">
+                </tei:div>
+                <tei:div type="section" xml:id="UT22084-043-004-listBibl-2">
                     <head type="section" tid="412">Secondary Sources</head>
                     <bibl xml:id="UT22084-043-004-714">84000 Translation Team, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh321.html">The Verses on
@@ -3472,9 +3475,9 @@
                             Meaning in Buddhist Art: Proceedings of a Seminar Held at Leiden
                             University 21–24 October 1991</title>, edited by K. R. Van Kooij and
                         H. van der Veere, 1–20. Groningen: Brill, 1996.</bibl>
-                </div>
-            </div>
-            <div type="glossary" xml:id="UT22084-043-004-glossary">
+                </tei:div>
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary" xml:id="UT22084-043-004-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-043-004-490">
@@ -4217,7 +4220,7 @@
                         </gloss>
                     </item>
                 </list>
-            </div>
+            </tei:div>
         </back>
     </text>
 </TEI>
