--- a/translations/kangyur/translations/090-020_toh576,932-the_dharani_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/translations/090-020_toh576,932-the_dharani_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -27,7 +27,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-020-31">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2.a">
+                <availability status="2">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -119,6 +119,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-10-04T08:56:21.988Z" type="text-version" status="0.0.11" xml:id="UT22084-090-020-32">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T08:23:05.589Z" type="translation-status" status="2" xml:id="UT22084-090-020-90">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T08:23:05.589Z" type="text-version" status="0.0.2" xml:id="UT22084-090-020-91">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -230,7 +236,8 @@
                 <div type="section" xml:id="UT22084-090-020-section">
                     <milestone unit="chunk" xml:id="UT22084-090-020-47"/>
                     <p tid="17">
-                        <ref cRef="F.202.b" type="folio" key="toh576" xml:id="UT22084-090-020-85"/> <ref cRef="F.280.b" type="folio" key="toh932" xml:id="UT22084-090-020-86"/> Homage to the Blessed Mother, the Perfection of Wisdom.</p>
+                        <ref cRef="F.202.b" type="folio" key="toh576" xml:id="UT22084-090-020-85"/> <ref cRef="F.280.b" type="folio" key="toh932" xml:id="UT22084-090-020-86"/> 
+                        Homage to the Blessed Lady, the Mother Perfection of Wisdom.</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-090-020-50"/>
                     <p rend="mantra" tid="20">
@@ -399,17 +406,17 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-090-020-78">
                             <term type="translationMain">dhāraṇī</term>
-                            <term xml:lang="Bo-Ltn" n="1">gzungs </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">gzungs </term>
                             <term xml:lang="bo" n="1">གཟུངས།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">dhāraṇī</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedSource">dhāraṇī</term>
                         </gloss>
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-090-020-79">
                             <term type="translationMain">karmic obscuration</term>
-                            <term xml:lang="Bo-Ltn" n="1">las kyi sgrib pa </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">las kyi sgrib pa </term>
                             <term xml:lang="bo" n="1">ལས་ཀྱི་སྒྲིབ་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">karmāvaraṇa</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">karmāvaraṇa</term>
                             <note type="definition">
                                 <p>Persistent physical, mental, or emotional
                                     obstacles to spiritual progress caused by past deeds.</p>
@@ -419,9 +426,9 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-090-020-80">
                             <term type="translationMain">equipment of merit</term>
-                            <term xml:lang="Bo-Ltn" n="1">bsod nams kyi tshogs </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">bsod nams kyi tshogs </term>
                             <term xml:lang="bo" n="1">བསོད་ནམས་ཀྱི་ཚོགས།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">puṇyasaṃbhāra</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">puṇyasaṃbhāra</term>
                             <note type="definition">
                                 <p>The progressive increase of virtuous karma.
                                     One of the two factors that come together in creating momentum
@@ -433,26 +440,26 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-090-020-81">
                             <term type="translationMain">thus-gone one</term>
-                            <term xml:lang="Bo-Ltn" n="1">de bzhin gshegs pa </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">de bzhin gshegs pa </term>
                             <term xml:lang="bo" n="1">དེ་བཞིན་གཤེགས་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">tathāgata</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">tathāgata</term>
                         </gloss>
                     </item>
                     <item>
                         <gloss type="person" xml:id="UT22084-090-020-83">
                             <term type="translationMain">Perfection of Wisdom</term>
-                            <term xml:lang="Bo-Ltn" n="1">shes rab kyi pha rol tu phyin pa </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">shes rab kyi pha rol tu phyin pa </term>
                             <term xml:lang="bo" n="1">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">prajñāpāramitā</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">prajñāpāramitā</term>
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-090-020-84">
-                            <term type="translationMain">Blessed Mother</term>
-                            <term xml:lang="Bo-Ltn" n="1">bcom ldan ’das ma yum </term>
-                            <term xml:lang="bo" n="1">བཅོམ་ལྡན་འདས་མ་ཡུམ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">bhagavatī</term>
-                        </gloss>
+                        <gloss type="person" xml:id="UT22084-090-020-89">
+                        <term type="translationMain">Blessed Lady</term>
+                        <term status="verified" xml:lang="Bo-Ltn" n="1">bcom ldan ’das ma</term>
+                        <term xml:lang="bo" n="1">བཅོམ་ལྡན་འདས་མ།</term>
+                        <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">bhagavatī</term>
+                    </gloss>
                     </item>
                 </list>
             </div>
