--- a/translations/kangyur/translations/090-021_toh577,933-the_dharani_of_the_perfection_of_wisdom_in_one_twenty_five_thousand_lines.xml
+++ b/translations/kangyur/translations/090-021_toh577,933-the_dharani_of_the_perfection_of_wisdom_in_one_twenty_five_thousand_lines.xml
@@ -27,7 +27,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-021-31">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2.a">
+                <availability status="2">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -119,6 +119,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-10-04T08:58:19.557Z" type="text-version" status="0.0.11" xml:id="UT22084-090-021-32">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T08:24:14.943Z" type="translation-status" status="2" xml:id="UT22084-090-021-80">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T08:24:14.943Z" type="text-version" status="0.0.2" xml:id="UT22084-090-021-81">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -350,17 +356,17 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-090-021-69">
                             <term type="translationMain">dhāraṇī</term>
-                            <term xml:lang="Bo-Ltn" n="1">gzungs </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">gzungs </term>
                             <term xml:lang="bo" n="1">གཟུངས།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">dhāraṇī</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedSource">dhāraṇī</term>
                         </gloss>
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-090-021-70">
                             <term type="translationMain">karmic obscuration</term>
-                            <term xml:lang="Bo-Ltn" n="1">las kyi sgrib pa </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">las kyi sgrib pa </term>
                             <term xml:lang="bo" n="1">ལས་ཀྱི་སྒྲིབ་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">karmāvaraṇa</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">karmāvaraṇa</term>
                             <note type="definition">
                                 <p>Persistent physical, mental, or emotional
                                     obstacles to spiritual progress caused by past deeds.</p>
@@ -370,9 +376,9 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-090-021-71">
                             <term type="translationMain">equipment of merit</term>
-                            <term xml:lang="Bo-Ltn" n="1">bsod nams kyi tshogs </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">bsod nams kyi tshogs </term>
                             <term xml:lang="bo" n="1">བསོད་ནམས་ཀྱི་ཚོགས།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">puṇyasaṃbhāra</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">puṇyasaṃbhāra</term>
                             <note type="definition">
                                 <p>The progressive increase of virtuous karma.
                                     One of the two factors that come together in creating momentum
@@ -384,25 +390,25 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-090-021-72">
                             <term type="translationMain">thus-gone one</term>
-                            <term xml:lang="Bo-Ltn" n="1">de bzhin gshegs pa </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">de bzhin gshegs pa </term>
                             <term xml:lang="bo" n="1">དེ་བཞིན་གཤེགས་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">tathāgata</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">tathāgata</term>
                         </gloss>
                     </item>
                     <item>
                         <gloss type="person" xml:id="UT22084-090-021-74">
                             <term type="translationMain">Perfection of Wisdom</term>
-                            <term xml:lang="Bo-Ltn" n="1">shes rab kyi pha rol tu phyin pa </term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">shes rab kyi pha rol tu phyin pa </term>
                             <term xml:lang="bo" n="1">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">prajñāpāramitā</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">prajñāpāramitā</term>
                         </gloss>
                     </item>
                     <item>
                         <gloss type="person" xml:id="UT22084-090-021-75">
                             <term type="translationMain">Blessed Lady</term>
-                            <term xml:lang="Bo-Ltn" n="1">bcom ldan ’das ma</term>
+                            <term status="verified" xml:lang="Bo-Ltn" n="1">bcom ldan ’das ma</term>
                             <term xml:lang="bo" n="1">བཅོམ་ལྡན་འདས་མ།</term>
-                            <term xml:lang="Sa-Ltn" type="attestedOther">bhagavatī</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">bhagavatī</term>
                         </gloss>
                     </item>
                 </list>
