--- a/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
+++ b/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
@@ -22,12 +22,12 @@
                 <sponsor xml:id="UT22084-061-011-16">Make, Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.19 <date>2024</date>
+                <edition>v 0.0.20 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-061-011"/>
                 <date/>
             </publicationStmt>
@@ -120,6 +120,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-15T12:13:21.584Z" type="text-version" status="0.0.19" xml:id="UT22084-061-011-57">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:08:23.412Z" type="translation-status" status="2.a" xml:id="UT22084-061-011-58">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:08:23.412Z" type="text-version" status="0.0.20" xml:id="UT22084-061-011-59">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
