--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-091-006-14">Torsten Gerloff</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -78,6 +78,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T14:19:03.077Z" type="text-version" status="0.0.7" xml:id="UT22084-091-006-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:36:01.785Z" type="translation-status" status="2.e" xml:id="UT22084-091-006-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:36:01.785Z" type="text-version" status="0.0.8" xml:id="UT22084-091-006-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
