--- a/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-096-010-13">Torsten Gerloff</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-096-010"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +66,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T14:21:47.095Z" type="text-version" status="0.0.7" xml:id="UT22084-096-010-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:37:37.623Z" type="translation-status" status="2.e" xml:id="UT22084-096-010-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:37:37.623Z" type="text-version" status="0.0.8" xml:id="UT22084-096-010-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
